# leuwi-panjang-plugins

./: .gitignore  Cargo.toml  README.md
plugins/plugin-claude/: Cargo.toml
plugins/plugin-claude/src/: lib.rs
plugins/plugin-gemini/: Cargo.toml
plugins/plugin-gemini/src/: lib.rs
plugins/plugin-ollama/: Cargo.toml
plugins/plugin-ollama/src/: lib.rs
plugins/plugin-remote/: Cargo.toml
plugins/plugin-remote/src/: lib.rs
